Bug 107013 - PDF image roundtrip: problem with page tree and multiple content streams
Summary: PDF image roundtrip: problem with page tree and multiple content streams
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2017-04-07 10:10 UTC by Miklos Vajna
Modified: 2017-04-10 18:17 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Reproducer document. (19.36 KB, application/vnd.oasis.opendocument.text)
2017-04-07 10:10 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2017-04-07 10:10:25 UTC
Created attachment 132394 [details]
Reproducer document.

The attached ODT file has a pdf image that has not just a page list, but also a tree of "pages" objects. Also the single page in the document has multiple content streams.

When exported to PDF, the PDF export result is invalid currently.
Comment 1 Commit Notification 2017-04-07 13:01:33 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4db4b9f016256fc8d2b637ed7a8f2b097aaa864b

tdf#107013 PDF export of PDF images: handle page tree and content streams

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2017-04-10 18:17:22 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a876f982a56c0bcc04667d55a53b05c90a8c3354

Related: tdf#107013 PDF export of PDF images: improve content streams

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.