tdf#107013 PDF export of PDF images: handle page tree and content streams

Handle when the page objects are not contained in a single list, but a
tree of "pages" objects.

Also handle when the page object has multiple content streams.

Change-Id: I7c5b0949314768af5915d37830a45e843e629446
Reviewed-on: https://gerrit.libreoffice.org/36256
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Jenkins <ci@libreoffice.org>
(cherry picked from commit 4db4b9f016256fc8d2b637ed7a8f2b097aaa864b)